# sonic-mgmt-framework

./: .gitignore  .gitmodules  1  Dockerfile  Makefile  Makefile.cache  Makefile.work  branding.mk  build_debian.sh  build_docker.sh  build_image.sh  build_kvm_image.sh  build_pkg.sh  dpkgd  dpkgd-listener  functions.sh  go.mod  go.sum  onie-image.conf  onie-mk-demo.sh  requirements.txt  retry_cmd.sh  slave.mk  start.sh  supervisord.conf
cvl/: cvl.go  cvl_api.go  cvl_test.go
debian/: files  sonic-hamd.install  sonic-mgmt-framework.substvars
installer/: sharch_body.sh
models/: yang$
organization_extensions/: extensions.sh
python-wheels/: sonic_config_engine-1.0-py3-none-any.whl  swsssdk-2.0.1-py3-none-any.whl
rules/: broadview.dep  broadview.mk  config  docker-base-stretch.mk  docker-broadview.dep  docker-broadview.mk  docker-dhcp-relay.mk  docker-fpm-frr.dep  docker-fpm-frr.mk  docker-fpm.mk  docker-iccpd.dep  docker-iccpd.mk  docker-l2mcd.dep  docker-l2mcd.mk  docker-lldp-sv2.dep  docker-lldp-sv2.mk  docker-nat.mk  docker-orchagent.mk  docker-pde.dep  docker-pde.mk  docker-platform-monitor.mk  docker-snmp-sv2.mk  docker-sonic-mgmt-framework.mk  docker-stp.dep  docker-stp.mk  docker-tam.dep  docker-tam.mk  docker-teamd.mk  docker-telemetry.mk  docker-udld.dep  docker-udld.mk  docker-vrrp.dep  docker-vrrp.mk  frr.mk  fsroot.dep  fsroot.mk  functions  hiredis.mk  hwdiag.dep  hwdiag.mk  (+43 more)
sonic-slave-stretch/: Dockerfile  Dockerfile.j2  (+1 more)
src/libebpf/src/libutil/: Makefile.am  bpf_load.c  ebpftest.c  libebpf.c
src/libebpf/src/libutil/ebpf/: libebpf.h
(+13288 files in other folders)
